SF Primes/src/objects/Create_Task_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These custom settings contain the settings for creating task on a given object with specified criteria</description>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_sObject__c</fullName>
        <label>Assignee sObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessDays__c</fullName>
        <label>BusinessDays</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Completed_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Completed Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks__c</fullName>
        <label>Number of Weeks</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Date__c</fullName>
        <label>Reference Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject_Type__c</fullName>
        <label>Task Subject/Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Day__c</fullName>
        <label>Week Day</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <label>Who</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Create Task Settings</label>
</CustomObject>